; ModuleID = '/home/carl/AnghaBench/memcached/extr_thread.c_item_trylock.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_thread.c_item_trylock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@item_locks = common dso_local global i32* null, align 8
@item_lock_hashpower = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @item_trylock(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i32*, i32** @item_locks, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i32, i32* @item_lock_hashpower, align 4
  %8 = call i64 @hashmask(i32 %7)
  %9 = and i64 %6, %8
  %10 = getelementptr inbounds i32, i32* %5, i64 %9
  %11 = bitcast i32* %10 to i8*
  store i8* %11, i8** %4, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = call i64 @pthread_mutex_trylock(i8* %12)
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = load i8*, i8** %4, align 8
  store i8* %16, i8** %2, align 8
  br label %18

17:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %18

18:                                               ; preds = %17, %15
  %19 = load i8*, i8** %2, align 8
  ret i8* %19
}

declare dso_local i64 @hashmask(i32) #1

declare dso_local i64 @pthread_mutex_trylock(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
